--- a/framework/Web/ThingsGateway.Web.Core/Configuration/UpgradeConfig.json
+++ b/framework/Web/ThingsGateway.Web.Core/Configuration/UpgradeConfig.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://gitee.com/dotnetchina/Furion/raw/v4/schemas/v4/furion-schema.json",
   "UpgradeConfig": {
-    "FileEnable": true, //是否启用软件自动更新
-    "ConfigEnable": true, //是否启用配置自动更新
+    "FileEnable": false, //是否启用软件自动更新
+    "ConfigEnable": false, //是否启用配置自动更新
     "UpdateServerUri": "127.0.0.1:7400", //管理服务IP
     "VerifyToken": "ThingsGateway", //验证Token
     "Name": "测试" //友好名称
