fix:rpc 特殊方法分类错误

--- a/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -4,6 +4,7 @@
 	<PropertyGroup>
 		<ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
 		<ServerGarbageCollection>false</ServerGarbageCollection>
+		<!--<PlatformTarget>x86</PlatformTarget>-->
 	</PropertyGroup>
 
 
