--- a/framework/Plugin/ThingsGateway.Plugin.OPCUA/ThingsGateway.Plugin.OPCUA.csproj
+++ b/framework/Plugin/ThingsGateway.Plugin.OPCUA/ThingsGateway.Plugin.OPCUA.csproj
@@ -36,7 +36,8 @@
 			<ExcludeAssets>runtime</ExcludeAssets>
 		</ProjectReference>
 	</ItemGroup>
-	
 
-
+	<PropertyGroup>
+		<EnableDynamicLoading>true</EnableDynamicLoading>
+	</PropertyGroup>
 </Project>
