--- a/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -3,7 +3,7 @@
 
 	<PropertyGroup>
 		<ApplicationIcon>wwwroot\favicon.ico</ApplicationIcon>
-		<ServerGarbageCollection>false</ServerGarbageCollection>
+		<!--<ServerGarbageCollection>false</ServerGarbageCollection>-->
 		<!--<PlatformTarget>x86</PlatformTarget>-->
 	</PropertyGroup>
 
