--- a/framework/Foundation/Directory.Build.props
+++ b/framework/Foundation/Directory.Build.props
@@ -1,9 +1,12 @@
 <Project>
 	<PropertyGroup>
-		<Version>3.0.0.8</Version>
+		<Version>3.0.0.10</Version>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 		<LangVersion>latest</LangVersion>
 		<TargetFrameworks>net45;netstandard2.0;net6.0;net7.0</TargetFrameworks>
+		<Description>
+			ThingsGateway.Foundation是工业设备通讯类库，归属于ThingsGateway边缘网关项目，说明文档：https://diego2098.gitee.io/thingsgateway-docs/
+		</Description>
 		<Authors>Diego</Authors>
 		<Product>ThingsGateway</Product>
 		<Copyright>© 2023-present Diego</Copyright>
@@ -16,7 +19,6 @@
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 		<PackageIcon>icon.png</PackageIcon>
 		<IncludeSymbols>true</IncludeSymbols>
-		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
 		<PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 		<PackageProjectUrl>https://diego2098.gitee.io/thingsgateway-docs/</PackageProjectUrl>
 		<PackageTags>ThingsGateway;Diego;dotNET China;Blazor;设备采集;边缘网关</PackageTags>
@@ -47,4 +49,5 @@
 		<DebugType>Embedded</DebugType>
 		<EmbedAllSources>True</EmbedAllSources>
 	</PropertyGroup>
+	
 </Project>
