--- a/framework/Demo/ThingsGateway.Foundation.Demo.Rcl/ThingsGateway.Foundation.Demo.Rcl.csproj
+++ b/framework/Demo/ThingsGateway.Foundation.Demo.Rcl/ThingsGateway.Foundation.Demo.Rcl.csproj
@@ -116,16 +116,16 @@
 
 
 	<ItemGroup >
-		<PackageReference Include="ThingsGateway.Foundation.Adapter.DLT645" Version="*" />
+		<!--<PackageReference Include="ThingsGateway.Foundation.Adapter.DLT645" Version="*" />
 		<PackageReference Include="ThingsGateway.Foundation.Adapter.Modbus" Version="*" />
 		<PackageReference Include="ThingsGateway.Foundation.Adapter.OPCDA" Version="*" />
 		<PackageReference Include="ThingsGateway.Foundation.Adapter.OPCUA" Version="*" />
-		<PackageReference Include="ThingsGateway.Foundation.Adapter.Siemens" Version="*" />
-		<!--<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.DLT645\ThingsGateway.Foundation.Adapter.DLT645.csproj" />
+		<PackageReference Include="ThingsGateway.Foundation.Adapter.Siemens" Version="*" />-->
+		<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.DLT645\ThingsGateway.Foundation.Adapter.DLT645.csproj" />
 		<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.Modbus\ThingsGateway.Foundation.Adapter.Modbus.csproj" />
 		<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.OPCDA\ThingsGateway.Foundation.Adapter.OPCDA.csproj" />
 		<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.OPCUA\ThingsGateway.Foundation.Adapter.OPCUA.csproj" />
-		<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.Siemens\ThingsGateway.Foundation.Adapter.Siemens.csproj" />-->
+		<ProjectReference Include="..\..\Foundation\ThingsGateway.Foundation.Adapter.Siemens\ThingsGateway.Foundation.Adapter.Siemens.csproj" />
 
 	</ItemGroup>
 	<ItemGroup >
