--- a/framework/Web/ThingsGateway.Gateway.ApiController/ThingsGateway.Gateway.ApiController.csproj
+++ b/framework/Web/ThingsGateway.Gateway.ApiController/ThingsGateway.Gateway.ApiController.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<DocumentationFile>$(MSBuildProjectName).xml</DocumentationFile>
+		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	
 	<ItemGroup>
