--- a/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -47,5 +47,8 @@
 		<ProjectReference Include="..\ThingsGateway.Web.Core\ThingsGateway.Web.Core.csproj" />
 	</ItemGroup>
 
-
+	<PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro' OR '$(SolutionName)'=='ThingsGateway - Pro - AF2021'">
+		<DefineConstants>AF2021</DefineConstants>
+	</PropertyGroup>
+	
 </Project>
