--- a/framework/Web/ThingsGateway.Components/ThingsGateway.Components.csproj
+++ b/framework/Web/ThingsGateway.Components/ThingsGateway.Components.csproj
@@ -4,6 +4,7 @@
 	<ItemGroup>
 		<PackageReference Include="Masa.Blazor" Version="1.1.1" />
 		<PackageReference Include="Masa.Blazor.SomethingSkia" Version="1.1.1" />
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
 	</ItemGroup>
 
 	
