--- a/framework/Web/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/framework/Web/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -35,8 +35,11 @@
 	</ItemGroup>
 
 
-
 	<ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro - AF2021'">
+		<ProjectReference Include="..\..\PluginProAF2021\ThingsGateway.Gateway.LK\ThingsGateway.Gateway.LK.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
 		<ProjectReference Include="..\..\PluginProAF2021\ThingsGateway.Gateway.LK\ThingsGateway.Gateway.LK.csproj" />
 	</ItemGroup>
 	
