--- a/framework/Web/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
+++ b/framework/Web/ThingsGateway.Web.Core/ThingsGateway.Web.Core.csproj
@@ -39,7 +39,7 @@
 		<ProjectReference Include="..\..\PluginProAF2021\ThingsGateway.Gateway.LK\ThingsGateway.Gateway.LK.csproj" />
 	</ItemGroup>
 	
-	<ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
+	<ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro' AND  '$(Configuration)' == 'Release'">
 		<ProjectReference Include="..\..\PluginProAF2021\ThingsGateway.Gateway.LK\ThingsGateway.Gateway.LK.csproj" />
 	</ItemGroup>
 	
