--- a/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -8,7 +8,7 @@
 	</PropertyGroup>
 
 
-	
+
 	<ItemGroup>
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\linux64_net6.pubxml" />
 		<_WebToolingArtifacts Remove="Properties\PublishProfiles\linux64_net7.pubxml" />
@@ -50,7 +50,7 @@
 	<PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro - AF2021'">
 		<DefineConstants>AF2021</DefineConstants>
 	</PropertyGroup>
-	<PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro'">
+	<PropertyGroup  Condition="'$(SolutionName)'=='ThingsGateway - Pro' AND  '$(Configuration)' == 'Release'">
 		<DefineConstants>AF2021</DefineConstants>
 	</PropertyGroup>
 </Project>
