--- a/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
+++ b/framework/Web/ThingsGateway.Web.Entry/ThingsGateway.Web.Entry.csproj
@@ -47,10 +47,13 @@
 		<ProjectReference Include="..\ThingsGateway.Web.Core\ThingsGateway.Web.Core.csproj" />
 	</ItemGroup>
 
+
 	<PropertyGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro - AF2021'">
 		<DefineConstants>AF2021</DefineConstants>
 	</PropertyGroup>
-	<PropertyGroup  Condition="'$(SolutionName)'=='ThingsGateway - Pro' AND  '$(Configuration)' == 'Debug'">
-		<DefineConstants>AF2021</DefineConstants>
-	</PropertyGroup>
+	<ItemGroup Condition="'$(SolutionName)'=='ThingsGateway - Pro - AF2021'">
+		<ProjectReference Include="..\..\PluginProAF2021\ThingsGateway.Gateway.LK\ThingsGateway.Gateway.LK.csproj" />
+		<PackageReference Include="MQTTnet.AspNetCore" Version="4.3.1.873" />
+	</ItemGroup>
+	
 </Project>
