--- a/framework/plugin/ThingsGateway.Plugin.Mqtt/ThingsGateway.Plugin.Mqtt.csproj
+++ b/framework/plugin/ThingsGateway.Plugin.Mqtt/ThingsGateway.Plugin.Mqtt.csproj
@@ -3,10 +3,14 @@
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
 
-		<Exec Command=" set dir=&quot;$(SolutionDir)web\ThingsGateway.Web.Entry\bin\$(Configuration)\$(TargetFramework)\Plugins\$(AssemblyName)&quot;&#xD;&#xA; if not exist %25dir%25  md %25dir%25  &#xD;&#xA;copy &quot;$(TargetDir)*Mqtt*.dll&quot;  %25dir%25&#xD;&#xA;&#xD;&#xA;&#xD;&#xA;" />
+		<Exec Command=" set dir=&quot;$(SolutionDir)web\ThingsGateway.Web.Entry\bin\$(Configuration)\$(TargetFramework)\Plugins\$(AssemblyName)&quot;&#xD;&#xA; if not exist %25dir%25  md %25dir%25  &#xD;&#xA;copy &quot;$(TargetDir)*Mqtt*.dll&quot;  %25dir%25&#xD;&#xA;&#xD;&#xA;copy &quot;$(TargetDir)*MQTTnet.AspNetCore*.dll&quot;  %25dir%25&#xD;&#xA;" />
 	
 	</Target>
-
-
+	<ItemGroup>
+		<PackageReference Include="MQTTnet.AspNetCore" Version="4.3.1.873" />
+	</ItemGroup>
+	<PropertyGroup>
+		<EnableDynamicLoading>true</EnableDynamicLoading>
+	</PropertyGroup>
 
 </Project>
